crates/nash-parse/src/expression/snapshots/nash_parse__expression__lambda__tests__lambda_wildcard.snap
---
source: crates/nash-parse/src/expression/lambda.rs
description: "Code:\n\n\\_ -> 42"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 9,
        },
    },
    value: Lambda {
        parameters: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 2,
                    },
                    end: Position {
                        line: 1,
                        column: 3,
                    },
                },
                value: Anything,
            },
        ],
        body: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 7,
                },
                end: Position {
                    line: 1,
                    column: 9,
                },
            },
            value: Int(
                42,
            ),
        },
    },
}
